<resources>
    <string name="app_name">RoomApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown">Unknown</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="start_type_your_note">Start type your note..</string>
    <string name="add_note">Add Note</string>
    <string name="add_checks_note">Add checks note</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>